# MMS2.0

./: .gitignore  Dockerfile  README.md  check_rules.py  debug_rules.py  docker-compose.yml  main.py  mock_mihomo_server.py  pyproject.toml  run_tests.py
.github/workflows/: docker-publish.yml
config/: config.yaml  config.yaml.example  mihomo_config_example.yaml
docker/: Dockerfile  config.yaml  docker-entrypoint.sh  mihomo.yaml  mosdns.yaml
docs/: AI辅助开发计划.md  ConfigManager模板文档.md  MihomoApiClient模板文档.md  MihomoConfigParser模板文档.md  MihomoMosdns动态同步器开发文档.md  MosdnsServiceController模板文档.md  PolicyResolver模板文档.md  RuleConverter模板文档.md  RuleDownloader模板文档.md  RuleGenerationOrchestrator模板文档.md  RuleMerger模板文档.md  RuleParser模板文档.md  StateMonitor模板文档.md  mihomo-api示例.md  mosdns规则指南.md  mrs规则集处理功能说明.md  rule-index.md  rule-provider-index.md  rule-providers 文件内容.md  下载功能优化.md  模板文档索引.md  项目完成总结报告.md
mihomo_sync/: config.py  logger.py
mihomo_sync/modules/: api_client.py  mihomo_config_parser.py  mosdns_controller.py  policy_resolver.py  rule_converter.py  rule_downloader.py  rule_generation_orchestrator.py  rule_merger.py  rule_parser.py  state_monitor.py
output/: direct_domain.txt  direct_ipv4.txt  direct_ipv6.txt  proxy_domain.txt  proxy_ipv4.txt  proxy_ipv6.txt  reject_domain.txt
output/PROXY/: domain.list  ipv4.list
output_intermediate/direct/: domain.txt  ipcidr.txt
output_intermediate/proxy/: domain.txt  ipcidr.txt
output_intermediate/reject/: domain.txt
